frontend: fix dropdown alignment in input groups
fixes: #890

Fixes the dropdowns on the Configure Lifecycle Hooks modal and Configure
Liveness Probe modal to correctly align with the text inputs in the
same Bootstrap input group. Also changes the dropdown button height to
match the text input height.

--- a/frontend/public/style/_common.scss
+++ b/frontend/public/style/_common.scss
@@ -26,7 +26,12 @@
 .co-btn-drop-input {
   margin-bottom: 5px;
   .btn.dropdown-toggle {
-    height: 32px;
+    height: 30px;
+  }
+
+  // Override display attribute of .dropdown class to preserve correct alignment within .input-group
+  .dropdown {
+    display: table-cell;
   }
 }
 
